Wed Nov 23 14:53:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Portable_Interceptors/IORInterceptor/PI_IORInterceptor.mpc:
        
          Added an 'after' line to one project to avoid concurrency
          collisions in VC8 builds, since the 2 projects in this file
          share IDL.

Wed Nov 23 14:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/ValueBox/client.cpp:
          This test was doing a few release calls to much causing it to
          crash.

Wed Nov 23 14:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp:
          Make sure all generated pointers are initialised to 0

Wed Nov 23 10:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/BiDirectional/run_test_ipv6.pl:
        * tests/CallbackTest/run_test_ipv6.pl:
        * tests/IPV6/run_test.pl:
        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:
          Updated these scripts because of the following change, use
          1|0 instead of YES|NO
          Tue Nov 22 07:49:59 2005  Douglas C. Schmidt

Tue Nov 22 22:58:55 2005  Chris Cleeland  <cleeland@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Any/PushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Sequence/SequencePushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Structured/StructuredPushConsumer.cpp:

	  Fixed warnings about preferring one conversion over another
	  from a _var that appeared on a couple of platforms.

Tue Nov 22 07:49:59 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * tao/ORB_Core.cpp (init): Updated the code to use 1 or 0 for
          options, rather than YES or NO.  Thanks to Abhi Sachdev for
          motivating this cleanup.

        * docs/Options.html: Updated the documentation to remove the use of
          YES and NO as options and replace them with 1 or 0 to be
          consistent with the other options.
