@@ -129,7 +129,8 @@ TAO_Notify_SequencePushConsumer::dispatch_from_queue (Request_Queue& requests, A
           {
             if (DEBUG_LEVEL > 0)
               ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t) Consumer %d: Will retry %d\n"),
-                ACE_static_cast (int, this->proxy ()->id ()), request->sequence ()));
+                          static_cast <int> (this->proxy ()->id ()),
+                          request->sequence ()));
             requests.enqueue_head (request);
             result = false;
           }
@@ -137,7 +138,8 @@ TAO_Notify_SequencePushConsumer::dispatch_from_queue (Request_Queue& requests, A
           {
             if (DEBUG_LEVEL > 0)
               ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t) Consumer %d: Discarding %d\n"),
-                ACE_static_cast (int, this->proxy ()->id ()), request->sequence ()));
+                          static_cast<int> (this->proxy ()->id ()),
+                          request->sequence ()));
             request->complete ();
             request->release ();
           }
@@ -148,7 +150,8 @@ TAO_Notify_SequencePushConsumer::dispatch_from_queue (Request_Queue& requests, A
           {
             if (DEBUG_LEVEL > 0)
               ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t) Consumer %d: Will retry %d\n"),
-                ACE_static_cast (int, this->proxy ()->id ()), request->sequence ()));
+                          static_cast<int> (this->proxy ()->id ()),
+                          request->sequence ()));
             requests.enqueue_head (request);
             result = false;
           }
@@ -156,7 +159,8 @@ TAO_Notify_SequencePushConsumer::dispatch_from_queue (Request_Queue& requests, A
           {
             if (DEBUG_LEVEL > 0)
               ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t) Consumer %d: Discarding %d\n"),
-                ACE_static_cast (int, this->proxy ()->id ()), request->sequence ()));
+                          static_cast<int> (this->proxy ()->id ()),
+                          request->sequence ()));
             request->complete ();
             request->release ();
           }
@@ -187,7 +191,8 @@ TAO_Notify_SequencePushConsumer::dispatch_from_queue (Request_Queue& requests, A
           {
             if (DEBUG_LEVEL > 0)
               ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t) Consumer %d: Will retry %d\n"),
-                ACE_static_cast (int, this->proxy ()->id ()), request->sequence ()));
+                          static_cast<int> (this->proxy ()->id ()),
+                          request->sequence ()));
             requests.enqueue_head (request);
             result = false;
           }
@@ -195,7 +200,8 @@ TAO_Notify_SequencePushConsumer::dispatch_from_queue (Request_Queue& requests, A
           {
             if (DEBUG_LEVEL > 0)
               ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("(%P|%t) Consumer %d: Discarding %d\n"),
-                ACE_static_cast (int, this->proxy ()->id ()), request->sequence ()));
+                          static_cast<int> (this->proxy ()->id ()),
+                          request->sequence ()));
             request->complete ();
             request->release ();
           }
